--- a/foundry/foundry.toml
+++ b/foundry/foundry.toml
@@ -1,6 +1,24 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = ["lib", "node_modules"]
+
+solc = '0.8.20'
+evm_version = 'paris'
+
+remappings = [
+    '@chainlink/contracts-ccip/=lib/ccip/contracts/', 
+    'forge-std/=lib/forge-std/src/',
+    '@chainlink/contracts/=lib/chainlink/contracts/',
+    '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts/'
+
+]
+
+
+[rpc_endpoints]
+arbitrumSepolia = "${ARBITRUM_SEPOLIA_RPC_URL}"
+ethereumSepolia = "${ETHEREUM_SEPOLIA_RPC_URL}"
+avalamchefuji = "${AVALANCH_FUJI_RPC_URL}"
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
